crux-mir/test/symb_eval/num/checked_mul_signed.good
test checked_mul_signed/3a1fbbbh::crux_test[0]: returned 44, FAILED

failures:

---- checked_mul_signed/3a1fbbbh::crux_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/num/checked_mul_signed.rs:4:5: 4:13: error: in checked_mul_signed/3a1fbbbh::crux_test[0]
[Crux]   attempt to multiply with overflow

[Crux] Overall status: Invalid.
