crux-mir/test/symb_eval/num/checked_mul_signed.rs
#![allow(arithmetic_overflow)]

#[crux::test]
fn crux_test() -> i8 {
    let x = -3;
    -100 * x
}

pub fn main() {
    println!("{:?}", crux_test());
}
